Fixed footer spacing

--- a/styles/general.css
+++ b/styles/general.css
@@ -144,7 +144,7 @@ footer {
 
 .footer__details {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: flex-start;
     flex-flow: column;
 
